Changed the html: added a header,nav bar, search bar and a few buttons. Also added the design to the page based on the game style design including responsiveness for different device widths: fonts, logo, nav bar, hamburger menu for tablet and mobile widths, etc.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,103 @@
     <title>Meme Generator</title>
 </head>
 
-<body>
+<body onload="onInit()">
+    <div class="main-screen" onclick="openMenu()"> </div>
+    <header class="flex align-center justify-between">
+        <img class="logo" src="img/LOGO.png" onclick="openGallery()" alt="">
 
+        <ul class="nav-bar flex">
+            <li onclick="openGallery()" data-trans="gallery">Gallery</li>
+            <li><a href="myMemes2.html" data-trans="memes">My Memes</a></li>
+        </ul>
+        <button class="btn-menu" onclick="openMenu()">☰</button>
+    </header>
 
+    <main>
+        <div class="gallery flex align-center">
+            <div class="search-img grid">
+                <div class="search-cell">
+                    <input class="filter-img" type="text" data-trans="search" placeholder="Search"
+                        oninput="filterImg(this)">
+                    <img class="search-icon" src="img/icons/search.png" alt="">
+                </div>
+                <button class="btn-gallery upload" onclick="addImgToGallery(this)" data-trans="upload">Upload</button>
+                <input type='file' id="getFile" class="hide" onchange="onImgInput(event)">
+                <div class="searched-show flex justify-center align-center"></div>
+                <button class="btn-gallery more" onClick="moreSearch()" data-trans="more">More</button>
+            </div>
+            <div class="imgs-container flex"></div>
+        </div>
+        <div class="editor-container flex justify-center hide">
+            <div class="canvas-container">
+                <canvas class="canvas"></canvas>
+            </div>
+            <div class="editor flex align-center">
+                <input class="text-line" type="text" data-trans="lineText" placeholder="Never be afraid"
+                    oninput="setTextIngMeme(this.value)">
+                <div class="buttons-line-1">
+                    <button class="btn" onclick="addLine()" data-trans="addLine" data-title="Add Line">
+                        <img class="icon" src="img/icons/add.png" alt=" ">
+                    </button>
+                    <button class="btn" onclick="deleteLine()" data-trans="deleteLine" data-title="Delete Line">
+                        <img class="icon" src="img/icons/trash.png" alt=" ">
+                    </button>
+                    <button class="btn" onclick="moveLineUpOrDown(-5)" data-trans="moveUp" data-title="Move Up">
+                        <img class="icon" src="img/icons/up.png" alt=" ">
+                    </button>
+                    <button class="btn" onclick="moveLineUpOrDown(5)" data-trans="moveDown" data-title="Move Down">
+                        <img class="icon" src="img/icons/down.png" alt=" ">
+                    </button>
+                    <button class="btn" onclick="switchLine()" data-trans="switchLine" data-title="Switch Lines">
+                        <img class="icon" src="img/icons/up-and-down-opposite-double-arrows-side-by-side.png" alt=" ">
+                    </button>
+                </div>
+                <div class="buttons-line-2 flex justify-center">
+                    <button class="btn" onclick="changeSize(2)" data-trans="increaseSize" data-title="Increase Size">
+                        <img class="icon" src="img/icons/increase font-icon.png" alt=" ">
+                    </button>
+                    <button class="btn" onclick="changeSize(-2)" data-trans="decreaseSize" data-title="Decrease Size">
+                        <img class="icon" src="img/icons/font-icon.png" alt=" ">
+                    </button>
+                    <button class="btn" onclick="clickChangeColor()" data-trans="textColor" data-title="Text Color">
+                        <img class="icon" src="img/icons/paint-board-and-brush.png" alt=" ">
+                    </button>
+                    <input class="color-input" type="color" oninput="changeColor()" hidden>
+                    <button class="btn" onclick="clickChangeColorStroke()" data-trans="strokeColor"
+                        data-title="Stroke Color">
+                        <img class="icon " src="img/icons/text stroke.png">
+                    </button>
+                    <input class="color-input-stroke" type="color" oninput="changeColorStroke()" hidden>
+                    <button class="btn" onclick="changeAlign('start')" data-trans="alignLeft" data-title="Align Left">
+                        <img class="icon" src="img/icons/align-to-left.png" alt=" ">
+                    </button>
+                    <button class="btn" onclick="changeAlign('center')" data-trans="alignCenter"
+                        data-title="Align Center">
+                        <img class="icon" src="img/icons/center-text-alignment.png" alt=" ">
+                    </button>
+                    <button class="btn" onclick="changeAlign('end')" data-trans="alignRight" data-title="Align Right">
+                        <img class="icon" src="img/icons/align-to-right.png" alt=" ">
+                    </button>
+                </div>
+                <!-- <div class="stickers">
+                    <img class="sticker" src="img/stickers/lonely.png" onclick="selectSticker(this)" alt="">
+                    <img class="sticker" src="img/stickers/patrick.png" onclick="selectSticker(this)" alt="">
+                    <img class="sticker" src="img/stickers/pikachu.png" onclick="selectSticker(this)" alt="">
+                    <img class="sticker" src="img/stickers/turtle.png" onclick="selectSticker(this)" alt="">
+                </div> -->
+                <div class="load-meme flex">
+                    <button class="load save" onclick="saveMeme()" data-trans="save">Save</button>
+                    <button class="load download"><a href="#" onclick="downloadMeme(this)" data-trans="download">
+                            Download</a></button>
+                    <form action="" method="POST" enctype="multipart/form-data" onsubmit="uploadImg(this, event)">
+                        <input name="img" id="imgData" type="hidden" />
+                        <button class="load publish" type="submit" data-trans="publish">Publish</button>
+                        <div class="share-container"></div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </main>
     <script src="js/services/meme.service.js"></script>
     <script src="js/meme.controller.js"></script>
     <script src="js/gallery.controller.js"></script>
