--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <main>
         <div class="gallery flex align-center">
             <div class="search-img grid">
-                <div class="search-cell">
+                <div class="search-bar">
                     <input class="filter-img" type="text" data-trans="search" placeholder="Search"
                         oninput="filterImg(this)">
                     <img class="search-icon" src="img/icons/search.png" alt="">
                 </div>
                 <button class="btn-gallery upload" onclick="addImgToGallery(this)" data-trans="upload">Upload</button>
                 <input type='file' id="getFile" class="hide" onchange="onImgInput(event)">
-                <div class="searched-show flex justify-center align-center"></div>
+                <div class="searched flex justify-center align-center"></div>
                 <button class="btn-gallery more" onClick="moreSearch()" data-trans="more">More</button>
             </div>
             <div class="imgs-container flex"></div>
@@ -41,31 +41,31 @@
                 <canvas class="canvas"></canvas>
             </div>
             <div class="editor flex align-center">
-                <input class="text-line" type="text" data-trans="lineText" placeholder="Never be afraid"
+                <input class="text-line" type="text" data-trans="lineText" placeholder="Add Text"
                     oninput="setTextIngMeme(this.value)">
-                <div class="buttons-line-1">
+                <div class="btns-line-1">
                     <button class="btn" onclick="addLine()" data-trans="addLine" data-title="Add Line">
                         <img class="icon" src="img/icons/add.png" alt=" ">
                     </button>
-                    <button class="btn" onclick="deleteLine()" data-trans="deleteLine" data-title="Delete Line">
+                    <button class="btn" onclick="deleteLine()" data-trans="deleteLine" data-title="Delete">
                         <img class="icon" src="img/icons/trash.png" alt=" ">
                     </button>
-                    <button class="btn" onclick="moveLineUpOrDown(-5)" data-trans="moveUp" data-title="Move Up">
+                    <button class="btn" onclick="moveLineUpOrDown(-5)" data-trans="moveUp" data-title="Up">
                         <img class="icon" src="img/icons/up.png" alt=" ">
                     </button>
-                    <button class="btn" onclick="moveLineUpOrDown(5)" data-trans="moveDown" data-title="Move Down">
+                    <button class="btn" onclick="moveLineUpOrDown(5)" data-trans="moveDown" data-title="Down">
                         <img class="icon" src="img/icons/down.png" alt=" ">
                     </button>
                     <button class="btn" onclick="switchLine()" data-trans="switchLine" data-title="Switch Lines">
                         <img class="icon" src="img/icons/up-and-down-opposite-double-arrows-side-by-side.png" alt=" ">
                     </button>
                 </div>
-                <div class="buttons-line-2 flex justify-center">
+                <div class="btns-line-2 flex justify-center">
                     <button class="btn" onclick="changeSize(2)" data-trans="increaseSize" data-title="Increase Size">
                         <img class="icon" src="img/icons/increase font-icon.png" alt=" ">
                     </button>
                     <button class="btn" onclick="changeSize(-2)" data-trans="decreaseSize" data-title="Decrease Size">
-                        <img class="icon" src="img/icons/font-icon.png" alt=" ">
+                        <img class="icon" src="img/icons/decrease font-icon.png" alt=" ">
                     </button>
                     <button class="btn" onclick="clickChangeColor()" data-trans="textColor" data-title="Text Color">
                         <img class="icon" src="img/icons/paint-board-and-brush.png" alt=" ">
@@ -109,7 +109,6 @@
     <script src="js/services/meme.service.js"></script>
     <script src="js/meme.controller.js"></script>
     <script src="js/gallery.controller.js"></script>
-    <script src="js/main.js"></script>
 </body>
 
 </html>
