--- a/index.html
+++ b/index.html
@@ -105,10 +105,15 @@
                 </div>
             </div>
         </div>
-    </main>
+    <!-- </main>
     <script src="js/services/meme.service.js"></script>
     <script src="js/meme.controller.js"></script>
     <script src="js/gallery.controller.js"></script>
+    <script src="js/services/gallery.service.js"></script>
+    <script src="js/services/storage.service.js"></script> -->
+    <script src="js/services/meme.service.js"></script>
+    <script src="js/meme.controller.js"></script>
+    <script src="js/services/storage.service.js"></script>
 </body>
 
 </html>
