The actual final commit! finished working on the my memes section now it's rendered and working.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                 </div>
             </div>
         </div>
+        <div class="container-my-memes flex"></div>
     </main>
     <script src="js/gallery.controller.js"></script>
     <script src="js/services/gallery.service.js"></script>
